test/output/ass3w3.out
Reading file ass3w3.pls ....Please wait

Printing input buffer parameters:

The capacity of the buffer is:  354
The current size of the buffer is:  354

Printing input buffer contents:

!!This program contains a syntax error
!!Forsyth's second corollary to Murphy's law:
!!"Just when you see the light at the end of the tunnel, the roof caves."

PLATYPUS{
 READ(IF);
 a$ = "";
 READ(b,a,b$);
 IF TRUE(if == "begin" .AND a$ |= a)THEN {
   a$ = "begin" # a$ # b$ # "end";
 
^@#$&} ELSE{REPEAT};
PLATYPUS !!What is this creature doing here?
}ÿ

Parsing the source file...

PLATY: Syntax error:  Line:  5
*****  Token code: 16 Attribute: IF
PLATY: Syntax error:  Line:  5
*****  Token code: 16 Attribute: IF
PLATY: READ statement parsed
PLATY: Primary string expression parsed
PLATY: String expression parsed
PLATY: Assignment expression(string) parsed
PLATY: Assignment statement parsed
PLATY: Syntax error:  Line:  7
*****  Token code: 13 Attribute: NA

Syntax errors: 2

Collecting garbage...
